RESOLVED FIXED134818
REGRESSION (r170935): WKWebView is always transparent until the first layer tree commit
https://bugs.webkit.org/show_bug.cgi?id=134818
Summary REGRESSION (r170935): WKWebView is always transparent until the first layer t...
Tim Horton
Reported 2014-07-10 16:42:39 PDT
http://trac.webkit.org/changeset/170935 made it so that we would initialize the scroll view background color to an invalid color until the first layer tree commit. We should go with white instead.
Attachments
patch (1.51 KB, patch)
2014-07-10 16:43 PDT, Tim Horton
andersca: review+
Radar WebKit Bug Importer
Comment 1 2014-07-10 16:43:16 PDT
Tim Horton
Comment 2 2014-07-10 16:43:50 PDT
Tim Horton
Comment 3 2014-07-10 16:47:17 PDT
Note You need to log in before you can comment on or make changes to this bug.