REGRESSION (r170935): WKWebView is always transparent until the first layer tree commit https://bugs.webkit.org/show_bug.cgi?id=134818 <rdar://problem/17632468>

Reviewed by Anders Carlsson.

* UIProcess/API/Cocoa/WKWebView.mm:
(scrollViewBackgroundColor):
r170935 made it so that we would initialize the scroll view background color to an
invalid color until the first layer tree commit. We should go with white instead.


Canonical link: https://commits.webkit.org/152765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170982 268f45cc-cd09-0410-ab3c-d52691b4dbfc